removing old webtools icon fixing alignment of colored background in webtools.css

--- a/plugins/webtools/skins/default/webtools.css
+++ b/plugins/webtools/skins/default/webtools.css
@@ -14,7 +14,7 @@ p
 
 #taskbar a.button-webtools{
 	padding-top: 18px;
-	height: 29px;
+	height: 28px;
 }
 
 a.button-webtools {
